Test262: Provide "<module source>" and enable source-phase-imports-module-source feature.